fix gallery alignment

--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,7 @@ Keyframes for animation*/
       flex-wrap: wrap;
   -webkit-box-align: center;
       -ms-flex-align: center;
-          align-items: center;
+          align-items: baseline;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
